--- a/index.html
+++ b/index.html
@@ -21,7 +21,23 @@
         </nav>
     </header>
     <main>
-        <h1>Em breve...</h1>
+        <section id="ficha">
+            <img src="imagens/guanabara-perfil.jpg" alt="Thalisson Gonçalves Ribeiro" class="foto">
+            <h1>Thalisson Gonçalves Ribeiro</h1>
+            <p>Formado em Ciência da Computação, com especialização em docência superior, desenvolvimento web e inteligência
+            artificial. Apaixonado por tecnologia e sempre em busca de novos desafios. Atualmente, atuo como professor e
+            desenvolvedor, compartilhando conhecimento através de cursos online e projetos de código aberto.</p>
+            <div id="social">
+                <a href="#" target="_blank" rel="nofollow"><i class="fa-brands fa-linkedin"></i></a>
+                <a href="#" target="_blank" rel="nofollow"><i class="fa-brands fa-github"></i></a>
+                <a href="#" target="_blank" rel="nofollow"><i class="fa-brands fa-youtube"></i></a>
+                <a href="#" target="_blank" rel="nofollow"><i class="fa-brands fa-instagram"></i></a>
+                <a href="#" target="_blank" rel="nofollow"><i class="fa-solid fa-globe"></i></a>
+            </div>
+        </section>
+        <section id="detalhes">
+
+        </section>
     </main>
     <footer>
 
