adicionar seção de video

--- a/index.html
+++ b/index.html
@@ -36,7 +36,25 @@
             </div>
         </section>
         <section id="detalhes">
-
+            <article id="video">
+                <h2><i class="fa-solid fa-handshake"></i> Deixe-me apresentar</h2>
+                <div class="video-container">
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/rFRpnSxTWR0?si=ZfGDavAJFuGQP-Nc"
+                        title="YouTube video player" frameborder="0"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                        referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                </div>
+               
+            </article> <!--Fim video-->
+            <article id="skills">
+                <h2><i class="fa-solid fa-brain"></i> Minhas skills</h2>
+            </article> <!--Fim skills-->
+            <article id="formacao">
+                <h2><i class="fa-solid fa-graduation-cap"></i> Formação</h2>
+            </article> <!--Fim formacao-->
+            <article id="projetos">
+                <h2><i class="fa-solid fa-trowel-bricks"></i> Projetos</h2>
+            </article> <!--Fim projetos-->
         </section>
     </main>
     <footer>
