--- a/index.html
+++ b/index.html
@@ -48,6 +48,65 @@
             </article> <!--Fim video-->
             <article id="skills">
                 <h2><i class="fa-solid fa-brain"></i> Minhas skills</h2>
+
+                <div id="skills-container">
+                    <div class="item">
+                        <div class="info">
+                            <span class="nome">
+                            <i class="fa-solid fa-code"></i> HTML5
+                            </span>
+                            <span class="porcent">
+                                70%
+                            </span>
+                        </div>
+                    <div class="barra">
+                        <div class="progresso" style="width: 70%;"></div>
+                    </div>
+                </div>
+                <!--FIM-->
+                <div class="item">
+                    <div class="info">
+                        <span class="nome">
+                            <i class="fa-solid fa-code"></i> CSS3
+                        </span>
+                        <span class="porcent">
+                            50%
+                        </span>
+                    </div>
+                    <div class="barra">
+                        <div class="progresso" style="width: 50%;"></div>
+                    </div>
+                </div>
+                <!--FIM-->
+                <div class="item">
+                    <div class="info">
+                        <span class="nome">
+                            <i class="fa-solid fa-code"></i> JavaScript
+                        </span>
+                        <span class="porcent">
+                            40%
+                        </span>
+                    </div>
+                    <div class="barra">
+                        <div class="progresso" style="width: 40%;"></div>
+                    </div>
+                </div>
+                <!--FIM-->
+                <div class="item">
+                    <div class="info">
+                        <span class="nome">
+                            <i class="fa-solid fa-person-rays"></i></i> Comunicação
+                        </span>
+                        <span class="porcent">
+                            70%
+                        </span>
+                    </div>
+                    <div class="barra">
+                        <div class="progresso" style="width: 70%;"></div>
+                    </div>
+                </div>
+                <!--FIM-->
+                </div>
             </article> <!--Fim skills-->
             <article id="formacao">
                 <h2><i class="fa-solid fa-graduation-cap"></i> Formação</h2>
