--- a/index.html
+++ b/index.html
@@ -110,6 +110,26 @@
             </article> <!--Fim skills-->
             <article id="formacao">
                 <h2><i class="fa-solid fa-graduation-cap"></i> Formação</h2>
+
+                    <div id="formacao-container">
+                        <div class="curso">
+                            <p class="periodo"> 2023 - 2024</p>
+                            <h3 class="instituicao"> Genines</h3>
+                            <p class="titulacao">Técnico em informática</p>
+                        </div>
+                        <!--FIM-->
+                        <div class="curso">
+                            <p class="periodo"> 2025</p>
+                            <h3 class="instituicao"> Curso em Video</h3>
+                            <p class="titulacao">JavaScript</p>
+                        </div>
+                        <!--FIM-->
+                        <div class="curso">
+                            <p class="periodo"> 2025 - 2026</p>
+                            <h3 class="instituicao"> Curso em Video</h3>
+                            <p class="titulacao">HTML5 e CSS3</p>
+                        </div>
+                    </div>
             </article> <!--Fim formacao-->
             <article id="projetos">
                 <h2><i class="fa-solid fa-trowel-bricks"></i> Projetos</h2>
