--- a/index.html
+++ b/index.html
@@ -133,11 +133,57 @@
             </article> <!--Fim formacao-->
             <article id="projetos">
                 <h2><i class="fa-solid fa-trowel-bricks"></i> Projetos</h2>
+
+                <div id="projeto-container">
+                    <div class="projeto"> <!-- Projeto 01 -->
+                       <a href="#" target="_blank" rel="noopener noreferrer"><img src="imagens/projeto-01-videos.jpg" alt="projeto 1" class="foto"> </a> 
+                        <div class="projeto-info">
+                            <p class="periodo">2025</p>
+                            <h3 class="titulo">Projeto de Vídeos</h3>
+                            <p>Projeto cosntruido para treinar a inserção de videos em nosso site</p>
+                            <details class="descricao">
+                                <summary>Saiba mais...</summary>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores consequuntur ipsam facilis impedit, necessitatibus illum veniam temporibus atque obcaecati dolorum perspiciatis possimus est reiciendis nisi perferendis laborum quia minus molestiae!</p>
+                            </details>
+                        </div>
+                    </div>
+
+                    <div class="projeto"> <!-- Projeto 02 -->
+                       <a href="https://thalissongr.github.io/projeto-cordel/" target="_blank" rel="noopener noreferrer"> <img src="imagens/projeto-02-cordel.jpg" alt="projeto 2" class="foto"> </a> 
+                        <div class="projeto-info">
+                            <p class="periodo">2025</p>
+                            <h3 class="titulo">Projeto Cordel</h3>
+                            <p>Projeto cosntruido para treinar efeito paralax em imagens.</p>
+                            <details class="descricao">
+                                <summary>Saiba mais...</summary>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores consequuntur ipsam facilis impedit,
+                                    necessitatibus illum veniam temporibus atque obcaecati dolorum perspiciatis possimus est reiciendis nisi
+                                    perferendis laborum quia minus molestiae!</p>
+                            </details>
+                        </div>
+                    </div>
+
+                    <div class="projeto"> <!-- Projeto 03 -->
+                        <a href="https://thalissongr.github.io/projeto-android/" target="_blank" rel="noopener noreferrer"> <img src="imagens/projeto-03-android.jpg" alt="projeto 1" class="foto"> </a>
+                        <div class="projeto-info">
+                            <p class="periodo">2025</p>
+                            <h3 class="titulo">Projeto android</h3>
+                            <p>Projeto cosntruido para treinar textos e imagens dinâmicas</p>
+                            <details class="descricao">
+                                <summary>Saiba mais...</summary>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores consequuntur ipsam facilis impedit,
+                                    necessitatibus illum veniam temporibus atque obcaecati dolorum perspiciatis possimus est reiciendis nisi
+                                    perferendis laborum quia minus molestiae!</p>
+                            </details>
+                        </div>
+                    </div>
+                </div>
+
             </article> <!--Fim projetos-->
         </section>
     </main>
     <footer>
-
+        Portfólio desenvolvido por Thalisson em 2026
     </footer>
     <script src="scripts/script.js"></script>
 </body>
