--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                     <div id="formacao-container">
                         <div class="curso">
                             <p class="periodo"> 2023 - 2024</p>
-                            <h3 class="instituicao"> Genines</h3>
+                            <h3 class="instituicao">Instituto Gênesis</h3>
                             <p class="titulacao">Técnico em informática</p>
                         </div>
                         <!--FIM-->
